# streaming

./: .gitignore  LICENSE  README.md
cad/: 72-prusa.rules  udev-prusa.txt
cad/box-debugging/: bridge.scad  st-link-v2-clone.scad  test-adapter-plate.scad  usb-to-uart.scad
cad/box-flashing/: bridge.scad  led-plate.scad  plate-led.scad  plate-side.scad  rpizero.scad  test-adapter-box.scad  test-adapter-box_assembly.scad
cad/box-stromi/: box-stromi-19.FCStd  box-stromi-21.FCStd  box-stromi.FCStd
cad/box-stromi/font/: installFont.sh
cad/cable-holder/: cable-holder.scad
cad/cable-holder-1/: cable-holder.scad  cable-holder_assembly.scad
cad/cable-holder-2/: cable-holder-2.scad  cable-holder-2_assembly.scad
cad/cable-holder_coax/: cable-holder_coax.scad  cable-holder_coax_assembly.scad
cad/freeCAD-first/: first.FCStd
cad/hw-cam-conn/: hw-cam-conn.scad
cad/hw-cam-conn/step-1/: hw-cam-conn.scad
cad/hw-cam-conn/step-2/: hw-cam-mounting.scad
cad/hw-conn-cam/step-2/: hw-cam-mounting.scad
cad/hw-conn-cam/step-3/: hw-conn-base.scad  hw-conn-cam-3_assembly.scad  hw-conn-cam.scad  hw-conn-distance.scad  microscope.scad
cad/hw-conn-microscope/: hw-conn-microscope.scad  hw-conn-microscope_assembly.scad  microscope.scad  wall.scad
cad/irs2184-distance/: irs2184-distance.scad  irs2184-distance_assembly.scad
cad/lib/: hw-conn-cam.scad  lib.scad  usb-hub-base.scad  usb-hub-wall-mount.scad
cad/lib-test/: chamfer-test.scad  rcube-test-1.scad  rcube-test-2.scad
cad/stencil-frame/: pcb.scad  stencil-frame.scad  stencil-frame_assembly.scad
cad/test-adapter-box/: st-link-v2-clone.scad  test-adapter-box.scad  test-adapter-box_assembly.scad  usb-to-uart.scad
cad/thingiverse/: knob.scad
cad/thingiverse/knob/: knob.scad
cad/usb-hub-wall-mount/: usb-hub-wall-mount.scad
docker/: Dockerfile  build.sh  run.sh
docker/tools/: bin2cpp.cpp
ecad/: 73-stm.rules  half-bridge-soldering.odg  udev-stm.txt
ecad/22-03-16/: notes.txt
ecad/22-03-24/: dc-motor-concept-schematic-1.odg  dc-motor-concept-schematic-2.odg
ecad/PhyAnimating/src/Convoluting/: PhyAnimating.py
ecad/PhyAnimating/src/DiracAnimating/: DiracAnimating.py
ecad/dc-motor/lit/: Final_Schematic.asc  VCO_version.asc  notes.txt
ecad/transmission-lines/: first.odg
ecad/transmission-lines/rf-switch/: rf-switch.kicad_pcb  rf-switch.kicad_prl  rf-switch.kicad_pro  rf-switch.kicad_sch
ecad/transmission-lines/tools/: pulseSiglent.sh
podman/: Dockerfile  build.sh  run.sh
podman/tools/: entry.sh
projects/scarts32/dcd_app1_c/: Makefile
projects/scarts32/dcd_app1_vhdl/: Makefile
sw/: auto-install.xml
sw/adventOfCode/day01/: AdventCoding.cpp
sw/adventOfCode/day05/: AdventCoding.cpp  input2.txt
sw/adventOfCode/day06/: meson.build
sw/adventOfCode/day07/: AocTree.h
sw/adventOfCode/day08/: AdventCoding.cpp  AocTree.cpp
sw/adventOfCode/day1/: AdventCoding.cpp  AdventCoding.h
sw/adventOfCode/day10/: AdventCoding.cpp
sw/adventOfCode/day11/: AdventCoding.cpp  AocMonkey.cpp  AocMonkey.h  meson.build
sw/adventOfCode/day12/: AdventCoding.cpp  main.cpp
sw/adventOfCode/day2/: AdventCoding.cpp  myStrat.txt
sw/adventOfCode/day3/: AdventCoding.cpp
sw/adventOfCode/day4/: AdventCoding.cpp
sw/adventOfCode/day5/: AdventCoding.cpp  input.txt
sw/adventOfCode/day6/: AdventCoding.cpp
sw/adventOfCode/day7/: AdventCoding.cpp  AocTree.cpp
sw/adventOfCode/day8/: AocTree.h  meson.build
sw/adventOfCode/day9/: AdventCoding.cpp
sw/common/: HttpRequesting.cpp  HttpRequesting.h  JsonProcessing.h  Processing.cpp
sw/common/core/: Log.cpp  Log.h  Pipe.h  Processing.cpp  Processing.h  SystemCommanding.cpp  SystemCommanding.h  SystemDebugging.cpp  SystemDebugging.h  TcpListening.cpp  TcpListening.h  TcpTransfering.cpp  TcpTransfering.h  Transfering.h
sw/dm4Flashing/: Processing.py  dm4Flashing.py  dm4Flashing.service  libLed.py
sw/dm4Flashing/doc/: state-detailed.puml  state-overview.puml  structure.puml
sw/gaming/: Authorizing.h  GameSelecting.cpp  GameSelecting.h  GameServing.cpp  GameServing.h  GameSupervising.cpp  GameSupervising.h  GamerInteracting.cpp  GamerInteracting.h  Gaming.cpp  Gaming.h  LibGame.cpp  LibGame.h  LibGaming.cpp  LibGaming.h  ListIdx.cpp  ListIdx.h  README  ServerSelecting.cpp  ServerSelecting.h  TelnetAuthorizing.cpp  TelnetAuthorizing.h  TicTacToeGaming.cpp  TicTacToeGaming.h  env.h  main.cpp  meson.build
sw/gaming/doc/22-08-16/: proc-tree.txt
sw/gaming/doc/22-08-20/: proc-tree.txt
sw/gaming/doc/22-09-16/: connect-four-frame.txt  server-list.txt
sw/gaming/doc/22-09-16/strange/: log.txt
sw/gaming/doc/frames/: connect-four-frame.txt  connect-four-stats.txt  server-list.txt
sw/gaming/doc/issues/22-09-16/: proc.txt  strange-ssh.pcapng
sw/gaming/doc/issues/22-09-20/: log.txt  telnet-conn-log.txt
sw/gaming/doc/json/: connectFour.json  gameConfig.json  gamingIn.json  gamingOut.json
sw/gaming/games/ConnectFour/: ConnectFourGaming.cpp  ConnectFourGaming.h  ConnectFourLobbying.cpp  ConnectFourLobbying.h  ConnectFourMatching.cpp  ConnectFourMatching.h
sw/gaming/games/TicTacToe/: TicTacToeGaming.cpp  TicTacToeGaming.h  TicTacToeLobbying.cpp  TicTacToeLobbying.h  TicTacToeMatching.cpp  TicTacToeMatching.h
sw/greeting/: Greeting.cpp  Greeting.h  main.cpp  meson.build
sw/led-test/: led-test.py
sw/podman/: Dockerfile  build.sh  clear.sh  run.sh
sw/podman/tools/: bin2cpp.cpp
tools/: camSetting.sh  cppprocessing.sh  obs-cli
tools/vDevSetting/: vCtrlSet.sh  vDev.desktop  vDevAutostart.sh  vDevFind.sh  vDevList.py  vDevSetting.json  vDevSetting.py  vDevSetting.sh
tools/vDevSetting/info/: face_udev.txt  face_v4l2-ctl.json  face_v4l2-ctl.txt  hw_udev.txt  hw_v4l2-ctl.json  hw_v4l2-ctl.txt  mic_udev.txt  mic_v4l2-ctl.json  mic_v4l2-ctl.txt  osc_udev.txt  osc_v4l2-ctl.json  osc_v4l2-ctl.txt  v4l2-ctl_help-all.txt  v4l2-ctl_help.txt  v4l2ToJson.sh  video0_udev.txt  video0_v4l2-ctl.json  video0_v4l2-ctl.txt  video2_udev.txt  video2_v4l2-ctl.json  video2_v4l2-ctl.txt  video4_udev.txt  video4_v4l2-ctl.json  video4_v4l2-ctl.txt  video6_v4l2-ctl.json  video6_v4l2-ctl.txt
(+156 files in other folders)
